--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,6 @@
 
   "installCommand": "npm ci",
   "buildCommand": "npm run vercel:build",
-  "outputDirectory": "dist",
-
   "builds": [
     {
       "src": "dist/main.js",
@@ -15,11 +13,7 @@
     {
       "src": "/(.*)",
       "dest": "dist/main.js",
-      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
-      "headers": {
-        "Access-Control-Allow-Origin": "http://localhost:5173",
-        "Access-Control-Allow-Credentials": "true"
-      }
+      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"]
     }
   ]
 }
