--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "class-validator": "^0.14.2",
     "dotenv": "^16.5.0",
     "egyptian-nationalid": "^1.0.0",
+    "express": "^5.1.0",
     "multer": "^2.0.1",
     "pg": "^8.15.6",
     "reflect-metadata": "^0.2.2",
