--- a/package.json
+++ b/package.json
@@ -39,10 +39,12 @@
     "@nestjs/typeorm": "^11.0.0",
     "@types/multer": "^1.4.13",
     "argon2": "^0.43.0",
+    "axios": "^1.10.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "dotenv": "^16.5.0",
     "egyptian-nationalid": "^1.0.0",
+    "form-data": "^4.0.3",
     "multer": "^2.0.1",
     "pg": "^8.15.6",
     "reflect-metadata": "^0.2.2",
